2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Account.cs: Pulled the peer out of the correct location to
	  display the name on the video chat window
	* Banter/Application.cs: Set the Peer window names correctly
	* Banter/Conversation.cs: Added debug messages

2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Conversation.cs: Saved off videoStreams

2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Conversation.cs: fixed up initializer

2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Application.cs, Banter/ConversationManager.cs,
	  Banter/Conversation.cs: Added create video

2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Application.cs: removed Chat window from video

2007-06-06  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs, Banter/Application.cs: debugging video
	  conversation
	* Banter/Conversation.cs: debugging video conversation

2007-06-06  Brady Anderson <banderso@novell.com> 

	* Banter/AccountManagement.cs, Banter/Account.cs,
	  Banter/Application.cs, Banter/Conversation.cs:
	  debugging/prototyping peer video window

2007-06-04  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: added some debug code to check capabilities
	* Banter/Application.cs: removed dead lines
	* Banter/Conversation.cs: Added IndicateSystemMessage method
	
	  Added system messages for video chat state changes

2007-06-01  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Fixed a typo in the NEWS doh!

2007-06-01  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: upped the version to 0.1.6 for the next iteration

2007-06-01  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Updated NEWS file for 0.1.5 release

2007-06-01  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Removed references to WebKit altogether.

2007-06-01  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Commented-out accidental inclusions of WebKit.

2007-06-01  Boyd Timothy <btimothy@gmail.com> 
