@@ -98,21 +98,7 @@ namespace Banter
 			
 			if (initiate == true)
 				this.CreateTextChannel ();
-		}
-		
-		internal Conversation (Account account, Person peer, ProviderUser peerUser, bool initiate, bool isVideo)
-		{
-			this.account = account;
-			this.tlpConnection = account.TlpConnection;
-			this.peerUser = peerUser;
-			this.messages = new List<Message> ();
-			last = 999;
-			this.initiatedChat = initiate;
-			this.videoStreams = new Dictionary<uint,uint> ();
-
-			peerUser.PresenceUpdated += OnPeerPresenceUpdated;
-			lastPeerPresence = peerUser.Presence;
-		}		
+		}	
 		#endregion
 		
 		#region Private Methods
