@@ -89,40 +89,6 @@ namespace Banter
 			
 			return conversation;
 		}
-
-		static public Conversation CreateVideo (Account account, Person peer, bool initiate)
-		{
-			Conversation conversation = null;
-			lock (lckr)
-			{
-				// Check if a conversation already exists
-				foreach (Conversation c in ConversationManager.conversations)
-				{
-					foreach (ProviderUser pu in peer.ProviderUsers) {
-						if (pu.Uri.CompareTo (c.PeerUser.Uri) == 0)
-						{
-							conversation = c;
-							break;
-						}
-					}
-				}
-
-				if (conversation == null)
-				{
-					// FIXEME::ProviderUsers will be indexed off the person
-					// object in priority
-					
-					Logger.Debug ("Conversation with {0} doesn't exist", peer.DisplayName);
-					conversation = new Conversation (account, peer, peer.ProviderUsers[0], initiate, true);
-					conversations.Add (conversation);
-				}
-			}
-			
-			return conversation;
-		}
-
-
-
 	}
 }	
 
